<resources>
    <string name="app_name">Hitchhiker Kosova</string>

    <!-- placeholders -->
    <!-- PH for signup/login-->
    <string name="phEmail">Email</string>
    <string name="phPassword">Password</string>
    <string name="phName">Name</string>
    <string name="phSurname">Surname</string>
    <string name="phPhoneNumber">Phone Number</string>
    <string name="phConfirmPassword">Confirm Password</string>
    <!-- AddPost-->
    <string name="phSelectTime">Select Time</string>
    <string name="phPrice">Price for person</string>
    <string name="phDate">Select Date </string>

    <!-- buttons text-->
    <!-- Welcome-->
    <string name="btnGoogleSignInTxt">Sign in with Google</string>
    <!-- Signup/Login-->
    <string name="btnLogInTxt">Log In</string>
    <string name="btnSignUpTxt">Sign Up</string>
    <string name="btnAddPostTxt">Post</string>
    <string name="btnForgotPasswordTxt">Send</string>
    <!--MainActivity-->
    <string name="btnCancel">Cancel</string>
    <!--MainPostsFragment-->
    <string name="btnReserve">Reserve</string>
    <!--ReservedRidesFragment-->
    <string name="btnDeleteReserved">Delete</string>
    <!--EditProfileFragment-->
    <string name="btnSaveChanges">Save Changes</string>
    <string name="btnConfrimDelete">Yes</string>


    <!-- onClick function -->
    <!-- Signup/Login-->
    <string name="btnLogInFunc" translatable="false">btnLogInFunc</string>
    <string name="tvRegisterFunc" translatable="false">tvRegisterFunc</string>
    <string name="btnSignUpFunc" translatable="false">btnSignUpFunc</string>
    <string name="tvForgotPasswordFunc" translatable="false">tvForgotPasswordFunc</string>
    <!-- AddPost-->
    <string name="btnNewPostFunc" translatable="false">btnNewPostFunc</string>
    <string name="btnAddPostFunc" translatable="false">btnAddPostFunc</string>
    <string name="etSelectTimeFunc" translatable="false">etSelectTimeFunc</string>
    <!-- MainActivity-->
    <string name="tvLogOutFunc" translatable="false">tvLogOutFunc</string>

    <!-- Text Views -->
    <!--Signup-->
    <string name="tvRegister">Don\'t have an account?</string>
    <string name="tvForgotPassword">Forgot password?</string>
    <!-- ResetPasswordActivity-->
    <string name="tvTitleForgotPassword">Forgot Your Password?</string>
    <string name="tvSubtitleForgotPassword">Enter your email address and we will send you an email with the link to reset your password.</string>
    <!-- AddPost / MainPostsFragment -->
    <string name="tvFrom">From</string>
    <string name="tvTo">To</string>
    <string name="tvDepartureTime">Departure Time</string>
    <string name="tvFreeSeats">Free Seats</string>
    <string name="tvPrice">Price</string>
    <string name="tvDate">Date</string>
    <string name="tvPhoneNumber">Phone Number</string>
    <string name="tvExtraInfo">Extra Info</string>
    <!-- MainActivity-->
    <string name="tvLogOut">Log out</string>
    <string name="tvProfile">Profile</string>
    <!--MyPosts-->
    <string name="tvMyReservations">Reservations: </string>
    <!-- EditProfileFragment-->
    <string name="tvPersonalDetails">Personal Details</string>
    <string name="tvEditProfileDeletePic"><u>Delete Profile Pic</u></string>

    <!--Spinner Arrays-->
    <!-- AddPost-->
    <string-array name="arrayCities">
        <item>Prishtina</item>
        <item>Prizreni</item>
        <item>Ferizaj</item>
        <item>Pejë</item>
        <item>Gjakovë</item>
        <item>Gjilan</item>
        <item>Mitrovicë</item>
    </string-array>
    <string-array name="arrayFreeSeats">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <!-- Spinner Default-->
    <string name="spDefault">Choose..</string>
    <!-- LogIn -->
    <string-array name="language">
        <item>En</item>
        <item>Al</item>
    </string-array>

    <!-- Text -->
    <!-- Validation for signup/login -->
    <string name="emptyName">Please enter name</string>
    <string name="emptySurname">Please enter surname</string>
    <string name="emptyPhoneNumber">Please enter phone number</string>
    <string name="validPhoneNumber">Please enter valid phone number</string>
    <string name="validEmail">Please enter valid email</string>
    <string name="emptyEmail">Please enter email</string>
    <string name="shortPassword">Password must contain at least 6 characters</string>
    <string name="emptyPassword">Please enter password</string>
    <string name="confirmPassword">Password doesn\'t match</string>
    <!-- MainActivity-->
    <string name="alertLogOut">Are you sure you want to logout?</string>
    <!--MyPostsAdapter-->
    <string name="alertDeletePost">Are you sure you want to delete this post?</string>
    <!--EditProfileFragment-->
    <string name="alertDeletePic">Are you sure you want to delete your picture?</string>
    <!--AddPostFragment-->
    <string name="errorNoPrice">Please provide the price!</string>
    <string name="errorNoPhoneNumber">Please provide \na phone number!</string>
    <string name="errorInvalidPhoneNumber">Please provide a valid phone number!</string>


    <!-- Content Descriptions-->
    <!--Login-->
    <string name="loginPhotoCD" translatable="false">"Hitchhiker Kosova" Logo</string>
    <!-- AddPost-->
    <string name="newPostCD" translatable="false">Button for adding a post</string>

    <!-- Hamburger Menu-->
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <!-- item -->
    <string name="home">Home</string>
    <string name="reserved">Reserved</string>
    <string name="myPostedRides">My Posted Rides</string>

    <!--Checkboxes-->
    <string name="rememberMeCheckBox">Remember me</string>

    <!-- Constants-->
    <string name="prefEmailKey" translatable="false">email</string>

    <!--SnackBars-->
    <!--LogIn-->
    <string name="snackBarCheckingCredentials">Checking credentials...</string>

    <!--Toast-->
    <!--LogIn/SignUp-->
    <string name="toastAuthFailed">Authentication failed.</string>
    <!--ResetPasswordActivity-->
    <string name="toastEmailSend">Email is send. Check your email.</string>
    <string name="toastEmailNotExist">An account with this email does not exist.</string>
    <string name="toastEnterEmail">Please enter your email!</string>
    <!--EditProfileFragment-->
    <string name="toastProfileChanged">Profile updated!</string>
    <!--RoadMapFragment-->
    <string name="toastUnableGetLocation">Unable to get location.</string>
    <string name="toastNoFreeSeats">No free seats available.</string>
    <string name="toastErrorRoutingFailed">Finding Route Failed...</string>
    <string name="toastFindingRoute">Finding Route...</string>
    <!--DatabaseHelper-->
    <string name="toastReservedOnce">You already reserved this ride.</string>
    <string name="toastReserved">Reservation made.</string>
    <string name="toastReservationDeleted">Reservation deleted!</string>
    <string name="toastPostDeleted">Post deleted!</string>
    <string name="toastPostNotDeleted">Post Wasn\'t Deleted. Something went wrong</string>
    <!--UploadProfilePicture-->
    <string name="toastUploadFailed">Uploading profile picture failed!</string>
    <!--AddPostFragment-->
    <string name="toastPostUploaded">Posted!</string>
    <string name="toastErrorNoDPTime">Please select the departure time!</string>
    <string name="toastErrorNoDate">Please select the date!</string>
    <string name="toastErrorPastDate">Time travel to the past is not possible… yet…</string>
    <!--PostsAdapter-->
    <string name="toastErrorReservingMyPost">You can\`t reserve your own post!</string>


    <!--ToolBar Titles-->
    <string name="AddPostTitle">Create a new trip</string>
    <string name="MainPostTitle">Home</string>
    <string name="ReservedRidesTitle">My reserved rides</string>
    <string name="MapTitle">See the road</string>
    <string name="MyPostedRidesTitle">My Posted Rides</string>
    <string name="EditProfileFragment">Edit Profile</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_map_key" translatable="false">AIzaSyBVCASVbYp7sEJwU4aXXKHiS0DaDt_xmO4</string>
    <string name="toastErrorSameCity">\"From\" and \"To\" can\'t have the same value!</string>
    <string name="tvAlreadyRegistered"><u>Already registered? Log In</u></string>
    <string name="tvWelcome">Welcome to Hitchhicker Kosova</string>
    <string name="google_sign_in_token" translatable="false">251127894246-87iv50sqo74m03shfsnlqsr98go8t4br.apps.googleusercontent.com</string>
    <string name="google_sign_in_failed">Google Sign In Failed!</string>
    <string name="alertUnsavedChanges">You have unsaved changes! If you exit, your changes will be lost.</string>
    <string name="btnExit">Exit</string>
    <string name="extraInfoNone">None</string>

</resources>
