<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/mainGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rides_fragment"
            android:icon="@drawable/ic_home_18pt_2x"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_reserved_fragment"
            android:icon="@drawable/ic_bookmark_18pt_2x"
            android:title="@string/reserved" />
        <item
            android:id="@+id/nav_myPostedRides_fragment"
            android:icon="@drawable/ic_direction_car_18pt_2x"
            android:title="@string/myPostedRides" />
    </group>
        <group android:id="@+id/secondaryGroup"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_profile"
                android:title="@string/tvProfile"
                android:icon="@drawable/ic_person_18pt_2x"
                />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/tvLogOut"
                android:icon="@drawable/logout_icon"/>
        </group>

</menu>