<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgraound_welcome_activity"
    tools:context=".activities.WelcomeActivity">

    <Button
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="126dp"
        android:background="@drawable/button_google"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:onClick="btnGoogleSignIn"
        android:text="@string/btnGoogleSignInTxt"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/btnWelcomeSignUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="126dp"
        android:background="@drawable/button_signup"
        android:onClick="btnWelcomeSignUp"
        android:text="@string/btnSignUpTxt"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleSignIn" />

    <TextView
        android:id="@+id/tvAlreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="173dp"
        android:capitalize="characters"
        android:onClick="tvAlreadyRegistered"
        android:text="@string/tvAlreadyRegistered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWelcomeSignUp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tvWelcome"
        android:textColor="#000000"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>